applications/notification-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
  namespace: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
      - name: notification-api
        image: notification-api:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
